Enable accuracy checking for huggingface inductor training on CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -341,7 +341,7 @@ jobs:
           command: |
             source .circleci/setup_env.sh
             make develop
-            python benchmarks/huggingface.py --accuracy --ci --skip-accuracy-check -d cuda --inductor --float32 --training \
+            python benchmarks/huggingface.py --accuracy --ci -d cuda --inductor --float32 --training \
               --total-partitions 3 --partition-id 0 --output=inductor_hf_training_0.csv
       - store_artifacts:
           path: inductor_hf_training_0.csv
@@ -363,7 +363,7 @@ jobs:
           command: |
             source .circleci/setup_env.sh
             make develop
-            python benchmarks/huggingface.py --accuracy --ci --skip-accuracy-check -d cuda --inductor --float32 --training \
+            python benchmarks/huggingface.py --accuracy --ci -d cuda --inductor --float32 --training \
               --total-partitions 3 --partition-id 1 --output=inductor_hf_training_1.csv
       - store_artifacts:
           path: inductor_hf_training_1.csv
@@ -385,7 +385,7 @@ jobs:
           command: |
             source .circleci/setup_env.sh
             make develop
-            python benchmarks/huggingface.py --accuracy --ci --skip-accuracy-check -d cuda --inductor --float32 --training \
+            python benchmarks/huggingface.py --accuracy --ci -d cuda --inductor --float32 --training \
               --total-partitions 3 --partition-id 2 --output=inductor_hf_training_2.csv
       - store_artifacts:
           path: inductor_hf_training_2.csv
