--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -17,7 +17,7 @@ body:
       placeholder: |
         A clear and concise description of what the bug is.
     validations:
-      required: true
+      required: false
 
   - type: textarea
     attributes:
@@ -27,7 +27,7 @@ body:
       placeholder: |
         Error...
     validations:
-      required: true
+      required: false
   - type: textarea
     attributes:
       label: Minified repro
